#463 using some java 17 features